--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-particles-js": "^3.3.0",
     "tailwindcss": "^1.8.6"
   },
   "devDependencies": {
